@@ -1073,7 +1073,7 @@ public abstract class KnxDeviceServiceLogic implements ProcessCommunicationServi
 						continue;
 					final var flags = optFlags.get();
 
-					final var mainType = TranslatorTypes.ofBitSize((int) flags[0]).get(0);
+					final var mainType = TranslatorTypes.ofBitSize((int) flags[0]).getFirst();
 					final String dpt = mainType.getSubTypes().keySet().iterator().next();
 					final var dp = new StateDP(group, group.toString(), mainType.mainNumber(), dpt);
 					dp.setPriority((Priority) flags[1]);
